fix alignment issues with button

--- a/src/components/tabs/tabs.css
+++ b/src/components/tabs/tabs.css
@@ -15,7 +15,7 @@
 }
 
 .active-tab {
-  width: 150px;
+  width: 50%;
   height: 50px;
   background-color: #0c151d;
   border-radius: 10px;
